Sec10_Chap115-XXX: optimized code